--- a/main.html
+++ b/main.html
@@ -4,12 +4,69 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <div class="main"></div>
+	<div class="d-flex">
+		<div class="products d-flex flex-column">
+			<div class="product d-flex justify-contents-around align-items-center">
+				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
+				<div class="d-flex flex-column justify-contents-center">
+					<h6>I am very sorry</h6>
+					<p >Display: 5 inches</p>
+					<p >RAM: 4GB</p>
+					<p >Memory:32GB</p>
+				</div>
+				<div>
+					<p>Qunatity</p>
+					<p>0</p>
+				</div>
+				<div>
+					<h6>$120</h6>
+				</div>
+			</div>
+			<div class="product d-flex justify-content-around">
+				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
+				<div>
+					<h6>I am very sorry</h6>
+					<p >Display: 5 inches</p>
+					<p >RAM: 4GB</p>
+					<p >Memory:32GB</p>
+				</div>
+				<div>
+					<p>Qunatity</p>
+					<p>0</p>
+				</div>
+				<div>
+					<h6>$120</h6>
+				</div>
+			</div>
+			<div class="product d-flex justify-content-around">
+				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
+				<div>
+					<h6>I am very sorry</h6>
+					<p >Display: 5 inches</p>
+					<p >RAM: 4GB</p>
+					<p >Memory:32GB</p>
+				</div>
+				<div>
+					<p>Qunatity</p>
+					<p>0</p>
+				</div>
+				<div>
+					<h6>$120</h6>
+				</div>
+			</div>
+		</div>
+		<div class="summary"></div>
+	</div>
+	
+    <script type="text/javascript" src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" ></script>
 
 </body>
 
