--- a/main.html
+++ b/main.html
@@ -10,59 +10,90 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-    <div class="main"></div>
-	<div class="d-flex">
-		<div class="products d-flex flex-column">
-			<div class="product d-flex justify-contents-around align-items-center">
-				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
-				<div class="d-flex flex-column justify-contents-center">
-					<h6>I am very sorry</h6>
-					<p >Display: 5 inches</p>
-					<p >RAM: 4GB</p>
-					<p >Memory:32GB</p>
-				</div>
-				<div>
-					<p>Qunatity</p>
-					<p>0</p>
-				</div>
-				<div>
-					<h6>$120</h6>
-				</div>
-			</div>
-			<div class="product d-flex justify-content-around">
-				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
-				<div>
-					<h6>I am very sorry</h6>
-					<p >Display: 5 inches</p>
-					<p >RAM: 4GB</p>
-					<p >Memory:32GB</p>
-				</div>
-				<div>
-					<p>Qunatity</p>
-					<p>0</p>
-				</div>
-				<div>
-					<h6>$120</h6>
-				</div>
-			</div>
-			<div class="product d-flex justify-content-around">
-				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
-				<div>
-					<h6>I am very sorry</h6>
-					<p >Display: 5 inches</p>
-					<p >RAM: 4GB</p>
-					<p >Memory:32GB</p>
-				</div>
-				<div>
-					<p>Qunatity</p>
-					<p>0</p>
-				</div>
-				<div>
-					<h6>$120</h6>
-				</div>
-			</div>
+    <div class="main">
+		<div align="center" >
+		 <h3>Shopping Cart</h3>
+		 <p aling="center" class="try">The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to be in procession of property. </p>
 		</div>
-		<div class="summary"></div>
+
+	</div>
+	<div class="row">
+		<div class="col-md-8">
+	
+			<div class="product d-flex justify-content-around align-items-center">
+				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
+				<div class="d-flex flex-column">
+					<h6>I am very sorry</h6>
+					<span>Display: 5 inches</span>
+					<span >RAM: 4GB</span>
+					<span >Memory:32GB</sapn>
+				</div>
+				<div class="d-flex flex-column align-items-center">
+					<p>Qunatity</p>
+					<p class="border border-primary p-4 py-1 rounded ">0</p>
+				</div>
+				<div>
+					<h6>$120</h6>
+				</div>
+			</div>
+			<div class="product d-flex justify-content-around align-items-center">
+				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
+				<div class="d-flex flex-column">
+					<h6>I am very sorry</h6>
+					<span>Display: 5 inches</span>
+					<span >RAM: 4GB</span>
+					<span >Memory:32GB</sapn>
+				</div>
+				<div class="d-flex flex-column align-items-center">
+					<p>Qunatity</p>
+					<p class="border border-primary p-4 py-1 rounded ">0</p>
+				</div>
+				<div>
+					<h6>$120</h6>
+				</div>
+			</div>
+			<div class="product d-flex justify-content-around align-items-center">
+				<img src="https://www.aptronixindia.com/media/catalog/product/cache/31f0162e6f7d821d2237f39577122a8a/i/p/iphone1164gbpurple_2_1.png" width="80px" height="110px" alt="iphone-img">
+				<div class="d-flex flex-column">
+					<h6>I am very sorry</h6>
+					<span>Display: 5 inches</span>
+					<span >RAM: 4GB</span>
+					<span >Memory:32GB</sapn>
+				</div>
+				<div class="d-flex flex-column align-items-center">
+					<p>Qunatity</p>
+					<p class="border border-primary p-4 py-1 rounded ">0</p>
+				</div>
+				<div>
+					<h6>$120</h6>
+				</div>
+			</div>
+			
+			
+		</div>
+		<div class="summary col-md-4">
+				<h5 align="center">Summary</h5>
+			    <div class="d-flex justify-content-around">
+					<span>Subtotal</span>
+					<span>$360</span>
+				</div>
+			    <div class="d-flex justify-content-around">
+					<span>Discount</span>
+					<span>$0</span>
+				</div>
+			    <div class="d-flex justify-content-around">
+					<span>Shipping</span>
+					<span>$0</span>
+				</div>
+			    <div class="d-flex justify-content-around">
+					<span>Total</span>
+					<span>$360</span>
+				</div>
+			    <div align="center">
+					<button class="btn btn-primary">Checkout</button>
+				</div>
+			
+		</div>
 	</div>
 	
     <script type="text/javascript" src="./script.js"></script>
